--- a/tokio-rustls/Cargo.toml
+++ b/tokio-rustls/Cargo.toml
@@ -14,8 +14,8 @@ rust-version = "1.56"
 
 [dependencies]
 tokio = "1.0"
-rustls = { version = "0.20.7", default-features = false }
-webpki = "0.22"
+rustls = { version = "0.21.0-alpha.1", default-features = false }
+rustls-webpki = "0.100.0-alpha.2"
 
 [features]
 default = ["logging", "tls12"]
